--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 body {
     background-color: #333333;
     /* font styling here */
-
+    font-family: "Kosugi Maru", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 /*
@@ -104,3 +106,4 @@ body {
 .background {
     background-color: #E98300;
 }
+
